--- a/include/friendly_messages.yml.erb
+++ b/include/friendly_messages.yml.erb
@@ -1,6 +1,12 @@
 ---
-ground_stop:
-  no_affected_areas: >-
-    <%= airport %> (<%= airport_iata %>) is currently experiencing a ground
-    stop that's expected to end at <%= end_time %> UTC. Try using another
-    airport nearby, as this is the only airport affected by this.
+ground_stop: >-
+  <%= airport %> (<%= airport_iata %>) is currently experiencing a ground
+  stop that's expected to end at <%= end_time %> UTC.
+<% if affected_areas.nil? or affected_areas.empty? -%>
+  Try using another airport nearby, as this is the only airport
+  affected by this.
+<% else -%>
+  The following are affected:
+
+  <%= affected_areas %>
+<% end -%>
